Grid-Layout 테스트

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World!
+<div style="display: grid; grid-template-columns: 100px 200px;">
+ <div style="background-color: red;">1</div>
+ <div style="background-color: yellow;">2</div>
+ <div style="background-color: green;">3</div>
+</div>
