Example Page Init

--- a/index.html
+++ b/index.html
@@ -1,55 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>테스트 페이지</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SASA Util</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/index.css">
+    <link rel="icon" href="./logo.png">
 </head>
 <body>
-  <h1>테스트 페이지</h1>
-  <h2>Made by Honk</h2>
-  <hr>
-  <div>
-    <p>이것은 새로운 문단이고, <br>이것은 새로운 줄이다.</p>
-    <p><strong>Lorem ipsum dolor</strong> <em>sit amet</em> consectetur adipisicing elit. <br>Maiores dolor quam nulla odio! Provident, eligendi! Quo alias cum, eaque, nemo molestiae culpa, optio vero est recusandae accusantium a similique nostrum.</p>
-  </div>
-  <div>
-    <table>
-      <tr>
-        <td>Design</td>
-        <td>None</td>
-      </tr>
-      <tr>
-        <td>Creator</td>
-        <td>Honk</td>
-      </tr>
-      <tr>
-        <td>Director</td>
-        <td>Honk</td>
-      </tr>
-      <tr>
-        <td>With</td>
-        <td>SASA</td>
-      </tr>
-    </table>
-  </div>
-  <div>
-    <a href="www.naver.com">Naver 바로가기</a>
-    <img src="https://www.navercorp.com/img/common/logo.svg" 
-    alt="네이버 로고" title="네이버 로고" width="200px">
-  </div>
-  <div>
-    <ul>
-      <li>항목 1</li>
-      <li>항목 2</li>
-    </ul>
-    <ol>
-      <li>항목 1</li>
-      <li>항목 2</li>
-      <ul>
-        <li>항목 2-1</li>
-      </ul>
-    </ol>
-  </div>
+    <header>
+        <a class="title" href="./index.html">
+            <img src="./logo.png">
+            SASA Club
+        </a>
+        <ul class="nav">
+            <li><a href="./look.html">동아리 살펴보기</a></li>
+            <li><a href="./rules.html">규정 알아보기</a></li>
+            <li><a href="./calendar.html">연간 일정 보기</a></li>
+            <li><a href="./tip.html">연합회의 말</a></li>
+        </ul>
+    </header>
+    <main>
+        <div class="welcome">
+            <div>
+                여기는 세종과학예술영재학교<br>
+                <span style="color: #013B84; font-weight: 900;">동아리 연합회</span>입니다.
+            </div>
+            <img src="./logo.png">
+        </div>
+        <div class="announcement">
+            <span style="color: #E04226; font-weight: bold;">공지사항</span> 동아리 입부 지원 신청 기간: 03.08(SAT) ~ 03.09(SUN)
+        </div>
+        <div class="links"> <!-- grid -->
+            <div class="funcs" style="background: linear-gradient(90deg, #FC466B77 0%, #3F5EFB77 0%);"><a href="./look.html">
+                <div class="funcname">동아리 살펴보기</div>
+                <div class="funcdesc">
+                    <div>우리 학교에는 무슨 동아리가 있을까?</div>
+                    <div>학교의 동아리에 대한 설명을 듣고 싶다면</div>
+                </div>
+            </a></div>
+            <div class="funcs" style="background: linear-gradient(90deg, #00C9FF77 0%, #92FE9D77 100%);"><a href="./rules.html">
+                <div class="funcname">규정 알아보기</div>
+                <div class="funcdesc">
+                    <div>기준이 몇 시수더라...?</div>
+                    <div>학교의 동아리 정책 관련 내용을 알아보고 싶다면</div>
+                </div>
+            </a></div>
+            <div class="funcs" style="background: linear-gradient(90deg, #1CB5E077 0%, #00085177 100%);"><a href="./calendar.html">
+                <div class="funcname">연간 일정 보기</div>
+                <div class="funcdesc">
+                    <div>오픈사사가 언제였지?</div>
+                    <div>우리 학교 동아리가 주최하는 행사 일정을 알고싶다면</div>
+                </div>
+            </a></div>
+            <div class="funcs" style="background: linear-gradient(90deg, #d5336977 0%, #daae5177 100%);"><a href="./tip.html">
+                <div class="funcname">연합회의 말</div>
+                <div class="funcdesc">
+                    <div>동아리 연합회가 남긴
+                    다양한 팁과 이야기들을 더 보고싶다면</div>
+                </div>
+            </a></div>
+        </div> 
+        <div class="desc">
+            <strong>동아리 연합회는 학생들의 동아리 활동을 돕는 학생자치기구입니다.</strong>
+            <br>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque sint maxime accusamus nemo, assumenda harum architecto animi dolores. Dignissimos quo quaerat accusamus, animi iste at quisquam voluptatum necessitatibus doloremque non?
+        </div>
+    </main>
+    <footer>
+        Made by Honk
+    </footer>
 </body>
 </html>
