example page style edited

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <img src="./logo.png">
             SASA Club
         </a>
-        <ul class="nav">
+        <nav><ul>
             <li><a href="./look.html">동아리 살펴보기</a></li>
             <li><a href="./rules.html">규정 알아보기</a></li>
             <li><a href="./calendar.html">연간 일정 보기</a></li>
             <li><a href="./tip.html">연합회의 말</a></li>
-        </ul>
+        </ul></nav>
     </header>
     <main>
         <div class="welcome">
@@ -63,7 +63,7 @@
             </a></div>
         </div> 
         <div class="desc">
-            <strong>동아리 연합회는 학생들의 동아리 활동을 돕는 학생자치기구입니다.</strong>
+            <strong style="font-size: 2.5rem;">동아리 연합회는 학생들의 동아리 활동을 돕는 학생자치기구입니다.</strong>
             <br>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque sint maxime accusamus nemo, assumenda harum architecto animi dolores. Dignissimos quo quaerat accusamus, animi iste at quisquam voluptatum necessitatibus doloremque non?
         </div>
