--- a/look.html
+++ b/look.html
@@ -14,12 +14,12 @@
             <img src="./logo.png">
             SASA Club
         </a>
-        <ul class="nav">
-            <li><a href="./look.html" class="curr">동아리 살펴보기</a></li>
+        <nav><ul>
+            <li class="curr"><a href="./look.html">동아리 살펴보기</a></li>
             <li><a href="./rules.html">규정 알아보기</a></li>
             <li><a href="./calendar.html">연간 일정 보기</a></li>
             <li><a href="./tip.html">연합회의 말</a></li>
-        </ul>
+        </ul></nav>
     </header>
     <main>
 
