스타일 예제 추가

--- a/test/test.html
+++ b/test/test.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <title>테스트 페이지</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="../logo.png">
 </head>
 <body>
   <h1>테스트 페이지</h1>
   <h2>Made by Honk</h2>
+  <h3>For NULL 10·11</h3>
   <hr>
   <div>
     <p>이것은 새로운 문단이고, <br>이것은 새로운 줄이다.</p>
     <p><strong>Lorem ipsum dolor</strong> <em>sit amet</em> consectetur adipisicing elit. <br>Maiores dolor quam nulla odio! Provident, eligendi! Quo alias cum, eaque, nemo molestiae culpa, optio vero est recusandae accusantium a similique nostrum.</p>
+    <p>Lorem ipsum dolor sit amet <span style="color: #ff0000;">consectetur adipisicing elit.</span> A mollitia tenetur quam eius ex reiciendis et facilis cumque eos possimus, ea magnam blanditiis molestias fuga neque in, sunt unde obcaecati.</p>
   </div>
   <div>
     <table>
@@ -50,6 +53,30 @@
         <li>항목 2-1</li>
       </ul>
     </ol>
+  </div>
+  <hr>
+  <div>
+    <div style="width: 50%; height: 50px; background-color: red;"></div>
+    <div style="height: 50vh; background-color: rgb(0 0 255);"></div>
+  </div>
+  <div>
+    <div style="margin: 10px; padding: 10px; background-color: yellow;">개발자도구로 margin, padding, content 보기</div>
+    <div style="margin-top: 10px; height: 50px; border-top-left-radius: 50px; padding-left: 100px; background-color: orange;">여기도!</div>
+  </div>
+  <div style="padding: 10px;">
+    <div style="background-color: red;">1</div>
+    <div style="background-color: yellow;">2</div>
+    <div style="background-color: green;">3</div>
+  </div>
+  <div style="padding: 10px; display: flex;">
+    <div style="background-color: red;">1</div>
+    <div style="background-color: yellow;">2</div>
+    <div style="background-color: green;">3</div>
+  </div>
+  <div style="padding: 10px; display: grid; grid-template-columns: 1fr 5fr;">
+    <div style="background-color: red;">1</div>
+    <div style="background-color: yellow;">2</div>
+    <div style="background-color: green;">3</div>
   </div>
 </body>
 </html>
