--- a/test/test.html
+++ b/test/test.html
@@ -55,11 +55,11 @@
     </ol>
   </div>
   <hr>
-  <div>
+  <div class="blackBorder">
     <div style="width: 50%; height: 50px; background-color: red;"></div>
     <div style="height: 50vh; background-color: rgb(0 0 255);"></div>
   </div>
-  <div>
+  <div id="cyanBorder">
     <div style="margin: 10px; padding: 10px; background-color: yellow;">개발자도구로 margin, padding, content 보기</div>
     <div style="margin-top: 10px; height: 50px; border-top-left-radius: 50px; padding-left: 100px; background-color: orange;">여기도!</div>
   </div>
